--- a/views/form.ejs
+++ b/views/form.ejs
@@ -14,7 +14,7 @@
       <option value="none" <%= transport && transport.mobility === 'none' ? 'selected' : '' %>>None</option>
     </select>
 
-    <!-- Toggles with Hidden Inputs -->  
+    <!-- Toggles with Hidden Inputs -->
     <% const renderToggle = (label, id, name, value) => { %>
       <div class="toggle-container">
         <span class="label"><%= label %>:</span>
@@ -30,7 +30,7 @@
     <%= renderToggle('Respect Form', 'respectToggle', 'respectForm', transport ? transport.respectForm : 'yes') %>
     <%= renderToggle('Bariatric', 'bariatricToggle', 'bariatric', transport ? transport.bariatric : 'yes') %>
 
-    <!-- Pickup and Dropoff Inputs -->  
+    <!-- Pickup and Dropoff Inputs -->
     <label for="pickup">Pick-up Address:</label>
     <input type="text" id="pickup" name="pickup" value="<%= transport ? transport.pickup : '' %>" required />
 
@@ -43,9 +43,10 @@
     <label for="dropoffMileage">Drop-off Mileage:</label>
     <input type="number" id="dropoffMileage" name="dropoffMileage" value="<%= transport ? transport.dropoffMileage : '' %>" required oninput="calculateMileage()" />
     
-    <!-- Total Mileage (Read-only) and Hidden Input -->  
+    <!-- Total Mileage (Read-only) and Hidden Input -->
     <label for="totalMileage">Total Mileage:</label>
-    <input type="number" id="totalMileage" name="totalMileage" value="<%= transport ? transport.totalMileage : '' %>" readonly />\n    <input type=\"hidden\" id=\"totalMileageHidden\" name=\"totalMileage\" value=\"<%= transport ? transport.totalMileage : '' %>\" />
+    <input type="number" id="totalMileage" name="totalMileage" value="<%= transport ? transport.totalMileage : '' %>" readonly />
+    <input type="hidden" id="totalMileageHidden" name="totalMileage" value="<%= transport ? transport.totalMileage : '' %>" />
     
     <button type="submit"><%= transport ? 'Update Transport' : 'Create Transport' %></button>
   </form>
