--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,8 @@
     <label>Password:</label>
     <input type="password" name="password" required>
     <button type="submit">Login</button>
+
+    <a href="/register">register</a>
   </form>
 </body>
 </html>
