--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Login</title>
+  <link rel="stylesheet" href="/css/auth.css">
 </head>
 <body>
   <h1>Login Page</h1>
@@ -14,8 +16,7 @@
     <label>Password:</label>
     <input type="password" name="password" required>
     <button type="submit">Login</button>
-
-    <a href="/register">register</a>
+    <a href="/register" class="register-button">Register</a>
   </form>
 </body>
 </html>
