--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Patient Transport Management</h1>
+    <!-- <h1>Patient Transport Management</h1> -->
   </header>
   <main>
     <%- body %>
