--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -13,10 +13,20 @@ body {
     color: red;
     margin-bottom: 1em;
   }
+  .error-message {
+    max-width: 450px;
+    background-color: #ffdddd;
+    border-left: 4px solid #f44336;
+    color: #a94442;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px;
+  }
+  
   
   form {
     max-width: 400px;
-    padding: 1em;
+    padding: 2.3em;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -40,9 +50,10 @@ body {
     background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 0.5em 1em;
-    border-radius: 3px;
+    padding: 0.75em 1em;
+     border-radius: 3px;
     cursor: pointer;
+    
   }
   
   button:hover {
